feat: implement backend sensor architecture and frontend dashboard components